--- a/styles/style.css
+++ b/styles/style.css
@@ -39,3 +39,81 @@ html,body{
 	display: inline-block;
 	width: 90%;
 }
+
+/*********/
+/* split between styling and media queries */
+/******/ 
+
+@media screen and (min-width:769px) and (max-width: 1200px) {
+    
+    #banner_image {
+        width: 100%;
+        margin-top: 2em;
+    }
+    
+    #main_content {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 960px;
+        width: 90%;
+        margin-top: 1.5em;
+    }
+    
+    #main_content_heading {
+        padding-bottom: 0em;
+    }
+    
+    .item_image {
+        max-width:95%;
+        min-width:71%;
+        align-items: center;
+        display: block;
+        margin: auto;
+    }
+}
+
+@media screen and (min-width: 0px) and (max-width: 480px) {
+    
+    .nav_span {
+        font-size: 0.8em;
+        padding-bottom: 0.2em;
+        padding-top: 0.2em;
+        display: block;
+        text-align: center;
+        border-bottom: 0.1em Solid white;
+        margin-right: 2.5em;
+    }
+    
+    #banner_image {
+        display: none;
+    }
+    
+    #main_content {
+        width: 85%;
+        padding-right: 0.5em;
+        padding-left: 0.5em;
+        margin-top: 10em;
+    }
+    
+    #main_content_heading {
+        padding-top: 0.5em;
+    }
+    
+    .item{
+        border-bottom: 0.2em Solid #0375B4;
+    }
+    
+    .item_image{
+        display:none;
+    }
+    
+    p {
+        font-size:0.8em;
+    }
+    
+    .library {
+        font-weight: bold;
+        font-size: 1.1em;
+    }
+
+}
