--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@ html,body{
 	font-size: 100%;
 	margin: 0;
 	padding: 0;
+    background-color: #DAA520;
 }
 
 #sticky_header {
@@ -14,14 +15,19 @@ html,body{
 
 #banner {
 	text-align: center;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	padding: 10px;
 	width: 100%;
+    background-image: url(../images/apples.jpg)
 }
 
 #nav_bar {
 	text-align: center;
 	width: 100%;
 	padding: 5px;
+    background-color: #D2691E;
+    color: white;
 }
 
 .navspan {
