--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,12 @@ html,body{
     border-right: 1px dashed #a7a7a7;
 }
 
+#footer-content ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 .facebook {
     width: 70px;
     height: 45px;
@@ -97,7 +103,7 @@ html,body{
 }
 
 #footer-content ul li span {
-    visibility: hidden
+    visibility: hidden;
 }
 
 /*********/
