--- a/styles/style.css
+++ b/styles/style.css
@@ -130,11 +130,15 @@ html,body{
         width: 85%;
         padding-right: 0.5em;
         padding-left: 0.5em;
-        margin-top: 15em;
+        margin-top: 16em;
     }
     
     p {
         font-size:0.8em;
+    }
+
+    #footer-content {
+        display: inline-block;
     }
 
 }
