changed banner image

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ html,body{
     text-shadow: -1.5px 0 #6c2411, 0 1.5px #6c2411, 1.5px 0 #6c2411, 0 -1.5px #6c2411;
 	padding: 10px;
 	width: 100%;
-    background-image: url(../images/apples.jpg)
+    background-image: url(../images/apples_banner.jpg)
 }
 
 #banner h1 {
