--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,10 @@ html,body{
     background-image: url(../images/apples_banner.jpg)
 }
 
+#sm {
+    
+}
+
 #banner h1 {
     padding-top: 1em;
     padding-bottom: 0em;
