--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@ html,body{
 	font-size: 100%;
 	margin: 0;
 	padding: 0;
-    background-color: #DAA520;
+    background-color: white;
     color: #6c2411;
 }
 
@@ -41,7 +41,7 @@ html,body{
 
 #nav_bar {
 	text-align: center;
-    height:1.4em;
+    height: 1.4em;
 	width: 100%;
 	padding: 1.2em;
     background-color: #6c2411;
