--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ html,body{
     height: 1.4em;
 	width: 100%;
 	padding: 1.2em;
-    background-color: #6c2411;
+    background-color: #ca3136;
     color: white;
 }
 
