--- a/styles/style.css
+++ b/styles/style.css
@@ -71,9 +71,17 @@ html,body{
 }
 
 #photos {
-    display: block;
-    margin: auto;
-    width: 40%;
+    line-height: 0;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 0px;
+    -moz-column-count: 2;
+    -moz-column-gap: 0px;
+    column-count: 2;
+    column-gap: 0px;
+}
+
+#photos img {
+    width: 50%;
 }
 
 #content {
