--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ html,body{
 #banner {
 	text-align: center;
     color: white;
-    text-shadow: -1.5px 0 #6c2411, 0 1.5px #6c2411, 1.5px 0 #6c2411, 0 -1.5px #6c2411;
+    text-shadow: -1.5px 0 #d3bb3d, 0 1.5px #d3bb3d, 1.5px 0 #d3bb3d, 0 -1.5px #d3bb3d;
 	padding: 10px;
 	width: 100%;
     background-image: url(../images/apples_banner.jpg)
