--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ html,body{
 	margin-top: 12.8em;
 	margin-right: auto;
 	margin-left: 3em;
-	width: 70%;
+	width: 75%;
 }
 
 #main h1 {
@@ -84,9 +84,9 @@ html,body{
 
 #twitfeed {
     float:right;
-    width:25%;
+    width:18%;
     margin-top: 12.8em;
-    margin-right: -4em;
+    margin-right: auto;
     margin-left:auto;
 }
 
