--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,9 @@ html,body{
     font-family: 'Open sans', sans-serif;
 }
 
+#34th span {font-weight: bold;
+}
+
 #twitfeed {
     float:right;
     width:18%;
