--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ html,body{
     padding-top: 0em;
     padding-bottom: 1em;
     margin: 0em;
+    color: white;
     font-family: 'Montserrat', sans-serif;
 }
 
