--- a/styles/style.css
+++ b/styles/style.css
@@ -159,6 +159,15 @@ html,body{
     visibility: hidden;
 }
 
+#map{
+    float: left;
+    width:65%;
+}
+
+#tcat {
+    float:right;
+    width:35%;
+}
 /*********/
 /* split between styling and media queries */
 /******/ 
