--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ html,body{
 	text-align: center;
     color: white;
     text-shadow: -1.5px 0 #d3bb3d, 0 1.5px #d3bb3d, 1.5px 0 #d3bb3d, 0 -1.5px #d3bb3d;
-	padding: 10px;
+	padding: 0.8em;
 	width: 100%;
     background-image: url(../images/apples_banner.jpg)
 }
