--- a/styles/style.css
+++ b/styles/style.css
@@ -168,6 +168,21 @@ html,body{
     float:right;
     width:35%;
 }
+
+table{
+    border-collapse:collapse;
+    border-spacing: 0;
+    font-family: 'Open sans', sans-serif;
+    margin: auto;
+    margin-top: 1.5em;
+}
+
+table, th, td {
+    border: 1px solid;
+    padding: 0.75em;
+    text-align: center;
+}
+
 /*********/
 /* split between styling and media queries */
 /******/ 
