--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,8 @@ html,body{
 
 #vendors-content h2{
     text-align: center;
+    border: 2px solid #ca3136;
+    border-radius: 5px;
 }
 
 #vendors-content .name{
@@ -101,14 +103,19 @@ html,body{
     margin-bottom: -0.9em;
 }
 
+#vendors-content ul {
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
 #vendors-food {
     float: left;
-    width: 50%;
+    width: 48%;
 }
 
 #vendors-crafts {
     float: right;
-    width: 50%;
+    width: 48%;
 }
 
 /** Social Media css */
