--- a/styles/style.css
+++ b/styles/style.css
@@ -86,38 +86,6 @@ html,body{
     margin-left:auto;
 }
 
-#vendors-content{
-    margin-top: -1.3em;
-    width: 90%;
-    margin-left: 5%;
-}
-
-#vendors-content h2{
-    text-align: center;
-    border: 2px solid #ca3136;
-    border-radius: 5px;
-}
-
-#vendors-content .name{
-    font-weight: bold;
-    margin-bottom: -0.9em;
-}
-
-#vendors-content ul {
-    padding-left: 2em;
-    padding-right: 2em;
-}
-
-#vendors-food {
-    float: left;
-    width: 48%;
-}
-
-#vendors-crafts {
-    float: right;
-    width: 48%;
-}
-
 /** Social Media css */
 
 #sm {
@@ -187,6 +155,40 @@ html,body{
 
 #content {
 	display: inline-block;
+}
+
+/** Vendors.php */
+
+#vendors-content{
+    margin-top: -1.3em;
+    width: 90%;
+    margin-left: 5%;
+}
+
+#vendors-content h2{
+    text-align: center;
+    border: 2px solid #ca3136;
+    border-radius: 5px;
+}
+
+#vendors-content .name{
+    font-weight: bold;
+    margin-bottom: -0.9em;
+}
+
+#vendors-content ul {
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+#vendors-food {
+    float: left;
+    width: 48%;
+}
+
+#vendors-crafts {
+    float: right;
+    width: 48%;
 }
 
 /** Gallery.php css */
