--- a/styles/style.css
+++ b/styles/style.css
@@ -195,7 +195,7 @@ html,body{
 
 #events-content{
     margin-top: -1.3em;
-    width: 90%;
+    width: 92%;
     margin-left: 5%;
 }
 
@@ -210,15 +210,19 @@ html,body{
     padding-right: 2em;
 }
 
+#otherstage-content {
+    float: right;
+    width: 50%;
+}
+
 #mainstage-content {
     float: left;
     width: 48%;
 }
 
-#2ndstage-content {
-    float: right;
-    width: 48%;
-}
+.saturday, .sunday{
+    font-family: 'open sans', sans-serif;
+} 
 
 /** Gallery.php css */
 
