--- a/styles/style.css
+++ b/styles/style.css
@@ -231,7 +231,7 @@ html,body{
 }
 
 .saturday, .sunday{
-    font-family: 'open sans', sans-serif;
+    font-weight: bold;
 } 
 
 /** Gallery.php css */
