hide images in mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -338,6 +338,14 @@ html,body{
         margin-top: 17em;
         margin-left: 1em;
     }
+
+    #photo1 {
+        display: none;
+    }
+
+    #photo3 {
+        display: none;
+    }
     
     p {
         font-size:0.8em;
