--- a/styles/style.css
+++ b/styles/style.css
@@ -307,6 +307,8 @@ html,body{
     #banner{
         height: 4em;
         text-shadow: -1.0px 0 #d3bb3d, 0 1.0px #d3bb3d, 1.0px 0 #d3bb3d, 0 -1.0px #d3bb3d;
+        width: 99%;
+        align-content: center;
     }
     
     #sm {
@@ -315,6 +317,8 @@ html,body{
     
     #nav_bar{
         padding-bottom: 8em;
+        width:100%;
+        align-content: center;
     }
     
     #nav_bar a{
