--- a/styles/style.css
+++ b/styles/style.css
@@ -358,10 +358,9 @@ html,body{
     
     #main {
         width: 85%;
-        padding-right: 0.5em;
         padding-left: 0.5em;
+        padding-right: 0.5em;
         margin-top: 17em;
-        margin-left: 1em;
     }
     
     #content h1 {
@@ -374,8 +373,8 @@ html,body{
     }
 
     #photo2 {
-        margin-right: 2.75em;
-        margin-left: 2.75em;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #photo3 {
