--- a/styles/style.css
+++ b/styles/style.css
@@ -294,6 +294,10 @@ caption {
     text-align: center;
 }
 
+#map {
+    width: 100%;
+}
+
 /*********/
 /* split between styling and media queries */
 /******/ 
