--- a/styles/style.css
+++ b/styles/style.css
@@ -294,8 +294,10 @@ caption {
     text-align: center;
 }
 
-#map {
-    width: 100%;
+#map img{
+    max-width: 100%;
+    height: auto;
+    width: auto;
 }
 
 /*********/
