--- a/styles/style.css
+++ b/styles/style.css
@@ -410,7 +410,7 @@ caption {
     #milton-content{display:none;}
 
     #otherstage{visibility: hidden;}
-    #otherstage-content{margin-top: -3.7em;}
+    #otherstage-content{margin-top: -3.7em;width:100%;}
     #weststate-content{display:none;}
 
     #photo1 {
